# Core

./: AUTHORS  CMakeLists.txt
CMakeConfig/: UserConfig.template  UserConfig_povman_specialized.txt
CMakeModules/: FindYafPythonLibs.cmake
include/: yafray_constants.h
include/core_api/: color.h  imagefilm.h  integrator.h  material.h  mcintegrator.h  scene.h  tiledintegrator.h  vector3d.h
include/integrators/: integr_utils.h  photonic.h  photonintegr.h  photonintegrGPU.h
include/materials/: shinydiff.h
include/utilities/: mathOptimizations.h  mcqmc.h
include/yafraycore/: ccthreads.h  irradianceCache.h  octree.h  photon.h  photonkdtree.h  triangle.h
src/: CMakeLists.txt
src/bindings/: yafrayinterface.i
src/gui/: mywindow.cc
src/integrators/: CMakeLists.txt  common.cc  directic.cc  directlight.cc  pathtracer.cc  photonic.cc  photonintegr.cc  photonintegrGPU.cc
src/materials/: CMakeLists.txt  glass.cc  shinydiff.cc  translucent.cc
src/xml_loader/: xml-loader.cc
src/yafraycore/: CMakeLists.txt  ccthreads.cc  environment.cc  imagefilm.cc  integrator.cc  irradianceCache.cc  mcintegrator.cc  photon.cc  scene.cc  triangle.cc
